# openwrite

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  app.py  create_db.py  db.py  env.example  gemini.py  gemini_single.py  i18n.json  models.py  pyproject.toml  run.py  test.py
.github/workflows/: python-tests.yml
models/: User.py
openwrite/: __init__.py  cli.py  gemini.py  launch_gemini.py
openwrite/routes/: admin.py  auth.py  blog.py  dashboard.py  federation.py  main.py  upload.py
openwrite/static/: emoji.json  openwrite.js
openwrite/static/style/: light.css  style.css  windows98.css
openwrite/static/style/themes/: warmnight.css
openwrite/templates/: admin.html  blog.html  blog_footer.html  blog_header.html  create.html  dashboard.html  discover.html  edit.html  footer.html  header.html  import.html  new_page.html  new_post.html  post.html  preview.html  register.html  stats.html
openwrite/utils/: create_db.py  db.py  helpers.py  i18n.json  models.py
static/style/: blog.css  style.css
templates/: admin.html  blog.html  blog_footer.html  blog_header.html  create.html  dashboard.html  discover.html  edit.html  footer.html  header.html  index.html  new_post.html  preview.html  register.html
tests/multi/: conftest.py  envtest  test_01_get.py  test_02_auth_get.py  test_03_auth_post.py  test_04_federation.py
tests/single/: conftest.py  envtest  test_01_get.py  test_02_auth_get.py  test_03_auth_post.py  test_04_federation.py
